2nd crud and such
