# src/routes/brands.js
@@ -1,18 +1,18 @@
 const router = require('express').Router();
-const ctrl = require('../controllers/bikes');
+const ctrl = require('../controllers/brands');
 const asyncHandler = require('../utils/asyncHandler');
 const validateObjectId = require('../middleware/validateObjectId');
-const { bikeSchema, validateBody } = require('../validators/bikes');
+const { brandSchema, validateBody } = require('../validators/brands');
 
-// READ 
+// READ
 router.get('/', asyncHandler(ctrl.list));
 router.get('/:id', validateObjectId, asyncHandler(ctrl.get));
 
 // CREATE
-router.post('/', validateBody(bikeSchema), asyncHandler(ctrl.create));
+router.post('/', validateBody(brandSchema), asyncHandler(ctrl.create));
 
 // UPDATE
-router.put('/:id', validateObjectId, validateBody(bikeSchema), asyncHandler(ctrl.update));
+router.put('/:id', validateObjectId, validateBody(brandSchema), asyncHandler(ctrl.update));
 
 // DELETE
 router.delete('/:id', validateObjectId, asyncHandler(ctrl.remove));
